--- a/Navbar/package.json
+++ b/Navbar/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "card",
+  "name": "navbar",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,21 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.6.0",
-    "@fortawesome/free-brands-svg-icons": "^6.6.0",
-    "@fortawesome/react-fontawesome": "^0.2.2",
-    "@headlessui/react": "^2.1.2",
-    "@heroicons/react": "^1.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icon": "^1.0.0",
     "react-router-dom": "^6.25.1",
-    "react-select": "^5.8.0",
-    "react-simple-typewriter": "^5.0.1",
-    "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.12",
-    "swiper": "^11.1.5"
+    "swiper": "^11.1.7"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
